shell: fixes text alignment in System Information
Fixes #863
Closes #879

--- a/modules/shell/cockpit.css
+++ b/modules/shell/cockpit.css
@@ -145,7 +145,6 @@ a {
 
 .cockpit-info-table td:first-child {
     text-align: right;
-    vertical-align: top;
     white-space:nowrap;
     color: #888888;
 }
